--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap");
 
-body {
+html,
+body,
+#root,
+.app {
+  width: 100%;
   font-family: "Poppins", sans-serif;
 }
